--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style/standard.css">
-  <script src="script.js"></script>
-  <title>Pokedex</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/standard.css" />
+    <script src="script.js"></script>
+    <title>Pokedex</title>
+  </head>
 
-<body>
-  
-</body>
+  <body>
+    <div class="content">
+      <header>
+        <div class="header-main-content">
+          <div class="headline-content">
+            <div class="headline">Pokedex</div>
+          </div>
+          <div class="input-content">
+            <input placeholder="Search Pokemon..." type="text" />
+          </div>
+        </div>
+      </header>
+    </div>
+  </body>
 </html>
