--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style/standard.css" />
+    <link rel="stylesheet" href="style/fonts.css">
+    <link rel="stylesheet" href="style/cards/electro-card.css">
     <script src="script.js"></script>
     <title>Pokedex</title>
   </head>
@@ -21,6 +23,24 @@
           </div>
         </div>
       </header>
+
+      <main>
+        <section class="main-content">
+          <div class="card-animation">
+            <div class="card">
+              <div class="card-content">
+                <div class="card-head">
+                  <span>Name</span>
+                  <div class="head-right">
+                    <span>Punkte</span>
+                    <img src="#">
+                  </div>
+                </div>
+              </div>
+            </div>            
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
