--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style/standard.css" />
     <link rel="stylesheet" href="style/fonts.css" />
-    <link rel="stylesheet" href="style/cards/grass-card.css" />
+    <link rel="stylesheet" href="style/cards/card.css" />
+    <link rel="stylesheet" href="style/cards/background_card.css">
+    <link rel="stylesheet" href="style/cards/card_animation.css">
+    <link rel="stylesheet" href="style/cards/gif_animation.css">
     <script defer src="script.js"></script>
     <script src="scripts/templates.js"></script>
     <title>Pokedex</title>
