evolution intermediate storage

--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
         </section>
         <section>
           <div id="overlay" class="d-none">
-            <div id="overlayCard" class="overlay-image">
-             
+            <div onclick="closeOverlay()" class="overlay-image">
+              <div onclick="stopBubblingProtection(event)" class="overlay-content" id="overlayCard">
+
+              </div>
             </div>
           </div>
         </section>
       </main>
     </div>
   </body>
-</html>
-<!-- onclick="closeOverlay()"  -->
+</html> 
