--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="style/overlay.css" />
     <script defer src="script.js"></script>
     <script src="scripts/templates.js"></script>
+    <script defer src="scripts/search.js"></script>
+    <script src="scripts/overlay.js"></script>
     <title>Pokedex</title>
   </head>
 
