--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style/standard.css" />
     <link rel="stylesheet" href="style/fonts.css" />
-    <link rel="stylesheet" href="style/cards/card.css" />
+    <link rel="stylesheet" href="style/cards/small-card.css" />
     <link rel="stylesheet" href="style/cards/background_card.css" />
     <link rel="stylesheet" href="style/cards/card_animation.css" />
     <link rel="stylesheet" href="style/cards/gif_animation.css" />
     <link rel="stylesheet" href="style/overlay.css" />
+    <link rel="stylesheet" href="style/cards/overlay-card.css">
     <script defer src="script.js"></script>
     <script src="scripts/templates.js"></script>
     <script defer src="scripts/search.js"></script>
