--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script defer src="script.js"></script>
     <script src="scripts/templates.js"></script>
     <script defer src="scripts/search.js"></script>
-    <script src="scripts/overlay.js"></script>
+    <script defer src="scripts/overlay.js"></script>
     <title>Pokedex</title>
   </head>
 
