--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="style/cards/background_card.css" />
     <link rel="stylesheet" href="style/cards/card_animation.css" />
     <link rel="stylesheet" href="style/cards/gif_animation.css" />
-    <link rel="stylesheet" href="style/overlay.css" />
-    <link rel="stylesheet" href="style/cards/overlay-card.css">
+    <link rel="stylesheet" href="style/overlay/overlay.css" />
+    <link rel="stylesheet" href="style/overlay/overlay-card.css">
+    <link rel="stylesheet" href="style/overlay/moves.css">
+    <link rel="stylesheet" href="style/overlay/stats.css">
+    <link rel="stylesheet" href="style/overlay/evolution.css">
     <script defer src="script.js"></script>
     <script src="scripts/templates.js"></script>
     <script defer src="scripts/search.js"></script>
