--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
               <button onclick="backToStart()">Back To Start</button>
             </div>
         </section>
-        <section id="overlay" class="d-none">
-            <div>
+        <section id="overlay" class="d-none width">
+            <div class="height">
               <div onclick="closeOverlay()" class="overlay-image">
                 <div onclick="stopBubblingProtection(event)" class="overlay-content" id="overlayCard">
   
